--- a/src/app/components/drawer/drawer.component.scss
+++ b/src/app/components/drawer/drawer.component.scss
@@ -2,8 +2,8 @@
 
 .drawer {
   box-sizing: border-box;
+  padding: 16px;
   width: 100%;
-  height: 340px;
   position: fixed;
   top: -340px;
   z-index: 9;
@@ -13,12 +13,16 @@
   }
 
   &__list {
-    padding: 0;
+    box-sizing: border-box;
+    margin: 0;
+    height: 100%;
+    width: 100%;
     display: flex;
     flex-direction: column;
     list-style: none;
     background-color: #f9f9ff;
     border-radius: 12px;
+    @include container.container();
   }
   &__item {
     width: 100%;
