--- a/src/app/components/sections/hero/hero.component.html
+++ b/src/app/components/sections/hero/hero.component.html
@@ -1,22 +1,25 @@
 <section class="hero">
-  <div class="hero__grid">
+  <div class="hero__wrapper">
     <div class="hero__content">
-      <div class="hero__content--left">
+      <div class="hero__text">
         <h1 class="hero__title">
-          Boost your business through online marketing
+          Redescubra a sí mesmo com
+          <span class="hero__emphasis">cuidado</span> especializado
         </h1>
         <p class="hero__description">
-          Hey there! I’m Jessica Parker. Digital business consultant focussed on
-          online marketing and advertising.
+          Estamos aqui para ouvir você, oferecer apoio e ajudar a construir o
+          equilíbrio emocional que transforma vidas.
         </p>
         <div class="hero__buttons">
-          <button class="hero__button hero__button--primary">Let's talk</button>
+          <button class="hero__button hero__button--primary">
+            Vamos conversar
+          </button>
           <button class="hero__button hero__button--secondary">
-            See case studides
+            Nossa metodologia
           </button>
         </div>
       </div>
-      <div class="hero__content--right">
+      <div class="hero__photo">
         <img class="hero__image" src="/hero.webp" alt="" />
       </div>
     </div>
