--- a/src/app/components/sections/services/services.component.html
+++ b/src/app/components/sections/services/services.component.html
@@ -3,8 +3,7 @@
     <div class="info-content">
       <h1 class="title-info">Nossos serviços</h1>
       <p class="description-info">
-        Oferecemos soluções personalizadas para apoiar seu bem-estar e ajudar
-        você a alcançar equilíbrio emocional e qualidade de vida.
+        Soluções personalizadas para apoiar seu bem-estar, equilíbrio emocional e qualidade de vida.
       </p>
       <button class="btn-info">Vamos conversar</button>
     </div>
