--- a/src/app/components/drawer/drawer.component.scss
+++ b/src/app/components/drawer/drawer.component.scss
@@ -2,46 +2,51 @@
 
 .drawer {
   box-sizing: border-box;
-  padding: 16px;
   width: 100%;
   position: fixed;
   top: -340px;
   z-index: 9;
-  transition: transform 0.2s ease-in-out;
+  transition: transform 0.3s ease-in-out;
+
   &--open {
     transform: translateY(411px);
   }
 
+  &__content {
+    padding-top: 12px;
+    width: 100%;
+    box-sizing: border-box;
+    @include container.container();
+  }
+
   &__list {
+    width: 100%;
+    border-radius: 12px;
     box-sizing: border-box;
     margin: 0;
-    height: 100%;
-    width: 100%;
+    padding: 0;
     display: flex;
     flex-direction: column;
     list-style: none;
     background-color: #f9f9ff;
-    border-radius: 12px;
-    @include container.container();
   }
+
   &__item {
+    box-sizing: border-box;
     width: 100%;
-    height: 100%;
+    text-align: center;
+    padding: 20px;
     &:not(:last-child) {
       border-bottom: 1px solid rgba(40, 41, 67, 0.1);
     }
   }
+
   &__link {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    box-sizing: border-box;
-    height: 100%;
     width: 100%;
-    padding: 20px;
     text-decoration: none;
     color: #1c3433;
-    font-size: 16px;
-    font-weight: 500;
+    font-size: 18px;
+    font-weight: 550;
+    text-align: center;
   }
 }
