--- a/src/app/components/sections/hero/hero.component.scss
+++ b/src/app/components/sections/hero/hero.component.scss
@@ -1,137 +1,145 @@
 @use 'abstracts/container' as container;
+
 .hero {
-  margin: 185px auto 114px;
-  height: 650px;
-  @include container.container();
-}
-
-.hero__grid {
-  padding-left: 56px;
-  padding-right: 56px;
-  box-sizing: border-box;
-  width: 100%;
-  height: 650px;
-  position: relative;
-  overflow: visible;
-  display: grid;
-  grid-template-rows: 1fr;
-  grid-template-columns: 1fr 1fr;
-  background-color: #1c3433;
-  border-radius: 24px;
-  gap: 56px;
-}
-
-.hero__content {
-  display: contents;
-}
-
-.hero__content--left {
-  background-color: #75fb91;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  grid-column: 1;
-  grid-row: 1;
-}
-
-.hero__title {
-  font-size: 64px;
-  font-weight: 500;
-  margin: 0;
-  padding: 0;
-  color: #f4f1eb;
-}
-
-.hero__description {
-  font-size: 24px;
-  margin: 15px 0 35px;
-  padding: 0;
-  color: #f4f1eb;
-}
-
-.hero__buttons {
-  display: flex;
-  flex-direction: row;
-  gap: 16px;
-}
-
-.hero__button {
-  height: 54px;
-  border-radius: 8px;
-  border: none;
-  padding-left: 32px;
-  padding-right: 32px;
-  font-size: 17.5px;
-  &--primary {
-    background-color: #75fb91;
-    color: #1c3433;
+  padding-top: 185px;
+  padding-bottom: 113px;
+  min-height: 672px;
+  @media (max-width: 991px) {
+    padding-top: 84px;
+    padding-bottom: 84px;
+    height: calc(650px + (806px * 0.7));
   }
-  &--secondary {
+  @media (max-width: 767px) {
+    padding-top: 84px;
+    padding-bottom: 89px;
+    height: calc(650px + (514px * 0.7));
+  }
+
+  &__wrapper {
+    box-sizing: border-box;
+    width: 100%;
+    @include container.container();
+  }
+
+  &__content {
     background-color: #1c3433;
+    height: 672px;
+    border-radius: 24px;
+    display: flex;
+    flex-direction: row;
+    padding-left: 56px;
+    padding-right: 56px;
+    gap: 56px;
+    @media (max-width: 991px) {
+      height: 650px;
+      flex-direction: column;
+      gap: calc(56px / 2);
+      padding-left: calc(56px / 2);
+      padding-right: calc(56px / 2);
+    }
+  }
+
+  &__text {
+    width: 100%;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    box-sizing: border-box;
+    padding-top: 56px;
+    padding-bottom: 56px;
+    justify-content: center;
+    align-items: start;
+    @media (max-width: 991px) {
+      padding-top: calc(56px / 2);
+      padding-bottom: 0;
+      height: 100%;
+      text-align: center;
+      align-items: center;
+    }
+  }
+
+  &__emphasis {
     color: #75fb91;
   }
-}
 
-.hero__content--right {
-  background-color: transparent;
-  border-radius: 24px;
-  position: relative;
-  height: 120%;
-  top: -10%;
-  grid-column: 2;
-  grid-row: 1;
-  overflow: hidden;
-}
-
-/* Layout responsivo */
-@media (max-width: 1200px) {
-  .hero {
-    // altura base + valor do deslocamento da div '--right'
-    min-height: calc(500px + 474px);
-  }
-  .hero__grid {
-    height: 500px;
-    grid-template-rows: auto auto;
-    grid-template-columns: 1fr;
-    // padding base divido por dois
-    padding-left: calc(56px / 2);
-    padding-right: calc(56px / 2);
-    gap: 0;
-  }
-
-  .hero__content--left {
-    justify-content: center;
-    text-align: center;
-    align-items: center;
-    grid-column: 1;
-    grid-row: 1;
-    height: 400px;
-    .hero__title {
+  &__title {
+    padding: 0;
+    margin: 0;
+    color: #efeadf;
+    font-size: 64px;
+    font-weight: 550;
+    @media (max-width: 991px) {
+      font-size: 56px;
+    }
+    @media (max-width: 767px) {
+      font-size: 48px;
+    }
+    @media (max-width: 479px) {
       font-size: 38px;
     }
-    .hero__description {
-      font-size: 24px;
-      margin: 20px 0 40px;
+  }
+  &__description {
+    padding: 0;
+    margin: 16px 0 40px;
+    font-size: 24px;
+    font-weight: 550;
+    color: #efeadf;
+    @media (max-width: 479px) {
+      font-size: 22px;
     }
-    .hero__button {
-      font-size: 16px;
+  }
+  &__buttons {
+    display: flex;
+    flex-direction: row;
+    gap: 8px;
+    @media (max-width: 479px) {
+      flex-direction: column;
     }
   }
 
-  .hero__content--right {
-    grid-column: 1;
-    grid-row: 2;
-    top: 0;
-    height: 700px;
+  &__button {
+    border: none;
+    height: 54px;
+    border-radius: 8px;
+    padding-left: 32px;
+    padding-right: 32px;
+    font-size: 18px;
+    &--primary {
+      background-color: #75fb91;
+      color: #1c3433;
+    }
+    &--secondary {
+      background-color: #1c3433;
+      color: #75fb91;
+    }
   }
-}
 
-.hero__image {
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  object-fit: cover;
-  z-index: 0;
+  &__photo {
+    box-sizing: border-box;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    position: relative;
+    @media (max-width: 991px) {
+      align-items: start;
+      justify-content: start;
+      height: 100%;
+    }
+  }
+  &__image {
+    border-radius: 24px;
+    position: absolute;
+    width: 100%;
+    height: 806px;
+    object-fit: cover;
+    @media (max-width: 991px) {
+      height: 806px;
+    }
+    @media (max-width: 767px) {
+      height: 514px;
+    }
+  }
 }
