--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -11,6 +11,7 @@
 <main>
   <app-hero></app-hero>
   <app-services></app-services>
+  <app-team></app-team>
 
 </main>
 <router-outlet></router-outlet>
