--- a/src/app/components/sections/hero/hero.component.html
+++ b/src/app/components/sections/hero/hero.component.html
@@ -1,6 +1,6 @@
 <section class="hero">
-  <div class="hero__wrapper">
-    <div class="hero__content">
+  <div class="hero__content">
+    <div class="hero__flex-content">
       <div class="hero__text">
         <h1 class="hero__title">
           Redescubra a sí mesmo com
