--- a/src/app/components/sections/hero/hero.component.scss
+++ b/src/app/components/sections/hero/hero.component.scss
@@ -15,13 +15,13 @@
     height: calc(650px + (514px * 0.7));
   }
 
-  &__wrapper {
+  &__content {
     box-sizing: border-box;
     width: 100%;
     @include container.container();
   }
 
-  &__content {
+  &__flex-content {
     background-color: #1c3433;
     height: 672px;
     border-radius: 24px;
