--- a/src/app/components/drawer/drawer.component.html
+++ b/src/app/components/drawer/drawer.component.html
@@ -1,14 +1,9 @@
-<nav class="drawer" [class.drawer--open]="isOpen">
-  <div class="drawer__content">
+<div class="drawer" [class.visible]="visible">
+  <nav class="drawer__nav">
     <ul class="drawer__list">
-      <li class="drawer__item drawer__item--menu" *ngFor="let menu of menus">
-        <a
-          class="drawer__link"
-          [routerLink]="menu.link"
-          [attr.aria-label]="menu.name"
-        >{{ menu.name }}</a
-        >
+      <li class="drawer__item" *ngFor="let item of items">
+        <a class="drawer__link" href="{{ item.link }}">{{ item.name }}</a>
       </li>
     </ul>
-  </div>
-</nav>
+  </nav>
+</div>
