--- a/src/app/components/drawer/drawer.component.scss
+++ b/src/app/components/drawer/drawer.component.scss
@@ -1,52 +1,49 @@
 @use 'abstracts/container' as container;
 
 .drawer {
-  box-sizing: border-box;
-  width: 100%;
   position: fixed;
-  top: -340px;
-  z-index: 9;
-  transition: transform 0.3s ease-in-out;
-
-  &--open {
-    transform: translateY(411px);
+  top: -100%;
+  left: 0;
+  width: 100%;
+  z-index: 99;
+  box-sizing: border-box;
+  padding: 0;
+  transition: top 0.3s ease-in-out;
+  &.visible {
+    top: 71px;
   }
-
-  &__content {
-    padding-top: 12px;
-    width: 100%;
+  &__nav {
     box-sizing: border-box;
+    width: 100%;
+    height: 100%;
+    margin: 0;
     @include container.container();
   }
-
   &__list {
-    width: 100%;
-    border-radius: 12px;
-    box-sizing: border-box;
-    margin: 0;
     padding: 0;
+    width: 100%;
     display: flex;
     flex-direction: column;
     list-style: none;
-    background-color: #f9f9ff;
+    background-color: white;
+    border-radius: 8px;
   }
-
   &__item {
-    box-sizing: border-box;
-    width: 100%;
-    text-align: center;
-    padding: 20px;
     &:not(:last-child) {
-      border-bottom: 1px solid rgba(40, 41, 67, 0.1);
+      border-bottom: 1px solid black;
     }
-  }
-
-  &__link {
+    padding: 0;
+    margin: 0;
+    display: flex;
     width: 100%;
-    text-decoration: none;
-    color: #1c3433;
-    font-size: 18px;
-    font-weight: 550;
+  }
+  &__link {
+    color: inherit;
     text-align: center;
+    padding: 12px;
+    margin: 0;
+    text-decoration: none;
+    width: 100%;
+    height: 100%;
   }
 }
