--- a/src/app/components/sections/hero/hero.component.scss
+++ b/src/app/components/sections/hero/hero.component.scss
@@ -1,75 +1,84 @@
 @use 'abstracts/container' as container;
 
 .hero {
-  padding-top: 185px;
-  padding-bottom: 113px;
-  min-height: 672px;
+  width: 100%;
+  height: 672px;
+  box-sizing: border-box;
+  padding-top: 129px;
   @media (max-width: 991px) {
-    padding-top: 84px;
-    padding-bottom: 84px;
-    height: calc(650px + (806px * 0.7));
+    padding-top: 49px;
   }
-  @media (max-width: 767px) {
-    padding-top: 84px;
-    padding-bottom: 89px;
-    height: calc(650px + (514px * 0.7));
-  }
-
-  &__content {
-    box-sizing: border-box;
+  @include container.container();
+  &__container {
     width: 100%;
-    @include container.container();
-  }
-
-  &__flex-content {
-    background-color: #1c3433;
     height: 672px;
     border-radius: 24px;
+    background-color: darkgray;
+    box-sizing: border-box;
     display: flex;
     flex-direction: row;
-    padding-left: 46px;
-    padding-right: 46px;
-    gap: 46px;
+    padding-left: 66px;
+    padding-right: 66px;
+    gap: 66px;
     @media (max-width: 991px) {
-      height: 650px;
       flex-direction: column;
-      gap: calc(46px / 2);
-      padding-left: calc(46px / 2);
-      padding-right: calc(46px / 2);
+      padding: 44px;
+      gap: 41px;
+    }
+    @media (max-width: 479px) {
+      flex-direction: column;
+      gap: 33px;
+      padding: 24px;
     }
   }
-
   &__text {
-    width: 100%;
-    height: 100%;
+    box-sizing: border-box;
     display: flex;
     flex-direction: column;
-    box-sizing: border-box;
-    padding-top: 46px;
-    padding-bottom: 46px;
     justify-content: center;
-    align-items: start;
+    width: 100%;
+    height: 100%;
+  }
+  &__image-container {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    border-radius: 24px;
+    width: 100%;
+    height: 100%;
+    position: relative;
     @media (max-width: 991px) {
-      padding-top: calc(46px / 2);
-      padding-bottom: 0;
-      height: 100%;
-      text-align: center;
-      align-items: center;
+      height: 100px;
+      max-height: 542px;
     }
   }
-
-  &__emphasis {
-    color: #75fb91;
+  &__image {
+    border-radius: 24px;
+    background-color: pink;
+    width: 100%;
+    height: 120%;
+    top: 50%;
+    left: 0;
+    transform: translateY(-50%);
+    position: absolute;
+    @media (max-width: 991px) {
+      transform: none;
+      top: 0;
+      height: 600px;
+    }
   }
 
   &__title {
-    padding: 0;
-    margin: 0;
-    color: #efeadf;
+    color: white;
     font-size: 64px;
-    font-weight: 550;
+    margin: 0;
+    padding: 0;
+    text-align: start;
+    font-weight: 600;
     @media (max-width: 991px) {
-      font-size: 46px;
+      font-size: 56px;
+      text-align: center;
     }
     @media (max-width: 767px) {
       font-size: 48px;
@@ -77,13 +86,19 @@
     @media (max-width: 479px) {
       font-size: 38px;
     }
+    &--emphasis {
+      color: black;
+    }
   }
   &__description {
-    padding: 0;
-    margin: 16px 0 40px;
+    color: white;
     font-size: 24px;
-    font-weight: 550;
-    color: #efeadf;
+    margin: 0;
+    padding: 0;
+    text-align: start;
+    @media (max-width: 991px) {
+      text-align: center;
+    }
     @media (max-width: 479px) {
       font-size: 22px;
     }
@@ -91,55 +106,21 @@
   &__buttons {
     display: flex;
     flex-direction: row;
-    gap: 8px;
+    justify-content: start;
+    gap: 10px;
+    @media (max-width: 991px) {
+      justify-content: center;
+    }
     @media (max-width: 479px) {
       flex-direction: column;
     }
   }
-
   &__button {
-    border: none;
+    font-size: 18px;
     height: 54px;
+    border: none;
     border-radius: 8px;
     padding-left: 32px;
     padding-right: 32px;
-    font-size: 18px;
-    &--primary {
-      background-color: #75fb91;
-      color: #1c3433;
-    }
-    &--secondary {
-      background-color: #1c3433;
-      color: #75fb91;
-    }
-  }
-
-  &__photo {
-    box-sizing: border-box;
-    width: 100%;
-    height: 100%;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    position: relative;
-    @media (max-width: 991px) {
-      align-items: start;
-      justify-content: start;
-      height: 100%;
-    }
-  }
-  &__image {
-    border-radius: 24px;
-    position: absolute;
-    width: 100%;
-    height: 806px;
-    object-fit: cover;
-    @media (max-width: 991px) {
-      height: 806px;
-    }
-    @media (max-width: 767px) {
-      height: 514px;
-    }
   }
 }
