--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -3,7 +3,7 @@
 body {
   margin: 0;
   padding: 71px 0 0;
-  background-color: #f4f1eb;
+  background-color: #f5ece4;
   font-family: 'DM Sans', sans-serif;
 }
 
