--- a/src/app/components/header/header.component.scss
+++ b/src/app/components/header/header.component.scss
@@ -6,8 +6,7 @@
   top: 0;
   left: 0;
   z-index: 100;
-  border-bottom: 1px solid black;
-  background-color: #f4f1eb;
+  background-color: white;
   &__nav {
     box-sizing: border-box;
     display: flex;
@@ -50,12 +49,13 @@
       align-items: center;
       justify-content: center;
       height: 40px;
-      background-color: black;
+      background-color: #076c68;
     }
   }
   &__link {
     text-decoration: none;
-    color: inherit;
+    color: #076c68;
+    font-weight: 500;
     &--emphasis {
       color: white;
     }
@@ -82,7 +82,9 @@
     border-radius: 8px;
     background-color: black;
     height: 3px;
-    transition: width 0.3s ease-in-out, background-color 0.3s ease-in-out;
+    transition:
+      width 0.3s ease-in-out,
+      background-color 0.3s ease-in-out;
     &--active {
       background-color: darkgray;
     }
