--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -3,11 +3,6 @@
 body {
   margin: 0;
   padding: 71px 0 0;
-  background-color: #f5ece4;
+  background-color: #f0ebe5;
   font-family: 'DM Sans', sans-serif;
-}
-
-button, input, select, textarea, a {
-  font-family: inherit;
-  outline: none;
 }
