--- a/src/app/components/drawer/drawer.component.scss
+++ b/src/app/components/drawer/drawer.component.scss
@@ -30,7 +30,7 @@
   }
   &__item {
     &:not(:last-child) {
-      border-bottom: 1px solid black;
+      border-bottom: 1px solid #d8d3ce;
     }
     padding: 0;
     margin: 0;
@@ -38,7 +38,8 @@
     width: 100%;
   }
   &__link {
-    color: inherit;
+    color: #076c68;
+    font-weight: 500;
     text-align: center;
     padding: 12px;
     margin: 0;
