--- a/src/app/components/sections/team/team.component.html
+++ b/src/app/components/sections/team/team.component.html
@@ -1,7 +1,17 @@
 <section class="team">
-  <div class="team__carousel">
-    <app-member
+  <div class="team__header">
+    <h1 class="team__title">Nosso time</h1>
+    <div class="team__buttons">
+      <img class="team__button" src="/images/widgets/arrow-left.svg" alt="" />
+      <img class="team__button" src="/images/widgets/arrow-right.svg" alt="" />
+    </div>
+  </div>
+  <div class="team__body">
+    <app-member></app-member>
+  </div>
+  <div class="team__footer">
+    <p class="team__description">
 
-    ></app-member>
+    </p>
   </div>
 </section>
