--- a/src/app/components/header/header.component.scss
+++ b/src/app/components/header/header.component.scss
@@ -6,7 +6,8 @@
   top: 0;
   left: 0;
   z-index: 100;
-  background-color: white;
+  background-color: #f0ebe5;
+  border-bottom: 1px solid rgba(0, 0, 0, 0.1);;
   &__nav {
     box-sizing: border-box;
     display: flex;
