--- a/src/app/components/sections/team/team.component.html
+++ b/src/app/components/sections/team/team.component.html
@@ -1,17 +1,40 @@
 <section class="team">
   <div class="team__header">
     <h1 class="team__title">Nosso time</h1>
-    <div class="team__buttons">
-      <img class="team__button" src="/images/widgets/arrow-left.svg" alt="" />
-      <img class="team__button" src="/images/widgets/arrow-right.svg" alt="" />
+    <div class="team__nav">
+      <button class="team__nav-button">
+        <img
+          class="team__nav-icon"
+          src="/images/widgets/arrow-left.svg"
+          alt="Anterior"
+        />
+      </button>
+      <button class="team__nav-button">
+        <img
+          class="team__nav-icon"
+          src="/images/widgets/arrow-right.svg"
+          alt="Anterior"
+        />
+      </button>
     </div>
   </div>
   <div class="team__body">
-    <app-member></app-member>
+    <app-member
+      *ngFor="let member of team"
+      [name]="member.title"
+      [description]="member.description"
+      [image]="member.image.src"
+      [imageAlt]="member.image.alt"
+    >
+    </app-member>
   </div>
   <div class="team__footer">
+    <h2 class="team__subtitle">Um time dedicado ao seu bem-estar</h2>
     <p class="team__description">
-
+      Profissionais qualificados e apaixonados. Cada membro traz experiência,
+      empatia e um compromisso genuíno com o seu crescimento pessoal. Conte com
+      a gente para caminhar ao seu lado nessa jornada.
     </p>
+    <button class="team__button team__button--primary">Vamos conversar</button>
   </div>
 </section>
