--- a/src/app/components/sections/team/team.component.scss
+++ b/src/app/components/sections/team/team.component.scss
@@ -8,22 +8,84 @@
     display: flex;
     align-items: center;
     justify-content: space-between;
+    margin-bottom: 35px;
   }
   &__title {
+    font-size: 46px;
+    color: #076c68;
     margin: 0;
+    padding: 0;
+    @media (max-width: 1399px) {
+      font-size: 36px;
+    }
+    @media (max-width: 991px) {
+      font-size: 40px;
+    }
+    @media (max-width: 375px) {
+      font-size: 36px;
+    }
+  }
+  &__subtitle {
+    color: #076c68;
+    margin: 0 0 8px;
     padding: 0;
   }
   &__description {
-    margin: 0;
+    color: #076c68;
     padding: 0;
+    margin: 0 0 15px;
   }
-  &__buttons {
+  &__nav {
     display: flex;
     flex-direction: row;
     gap: 10px;
   }
-  &__button {
+  &__nav-button {
+    border: none;
+    padding: 0;
+    background-color: transparent;
     width: 38px;
     height: 38px;
+    cursor: pointer;
+  }
+  &__nav-icon {
+    width: 38px;
+    height: 38px;
+  }
+  &__body {
+    display: flex;
+    flex-direction: row;
+    gap: 30px;
+    margin-bottom: 55px;
+    overflow-x: hidden;
+    scroll-behavior: smooth;
+    scrollbar-width: none;
+    ::-webkit-scrollbar {
+      display: none;
+    }
+  }
+  &__button {
+    font-size: 18px;
+    height: 54px;
+    border: none;
+    border-radius: 8px;
+    padding-left: 32px;
+    padding-right: 32px;
+    transition: background-color 0.3s ease-in-out;
+    cursor: pointer;
+
+    &--primary {
+      background-color: #ff8055;
+      color: white;
+      &:hover {
+        background-color: #d95e42;
+      }
+      &:active {
+        background-color: #c8523a;
+      }
+    }
+  }
+  &__footer {
+    text-align: center;
   }
 }
