--- a/src/app/components/stepper/stepper.component.scss
+++ b/src/app/components/stepper/stepper.component.scss
@@ -9,24 +9,49 @@
   }
 
   &__indicator {
+    box-sizing: border-box;
     display: flex;
     flex-direction: column;
     align-items: center;
     width: 20px;
+    //background-color: hotpink;
   }
 
-  &__circle {
+  .stepper__circle {
     width: 28px;
     height: 28px;
     border-radius: 50%;
-    background-color: #ff8055;
+    background-color: #076c68;
+    position: relative;
+
+    &::before {
+      content: '';
+      position: absolute;
+      width: 0;
+      height: 0;
+      top: 50%;
+      left: 50%;
+      background-color: #ff8055;
+      border-radius: 50%;
+      transform: translate(-50%, -50%) scale(0);
+      transition:
+        width 0.4s ease-in-out,
+        height 0.4s ease-in-out,
+        transform 0.4s ease-in-out;
+    }
+
+    &.active::before {
+      width: 105%;
+      height: 105%;
+      transform: translate(-50%, -50%) scale(1);
+    }
   }
 
   &__line {
     min-height: 280px;
     width: 6px;
-    background-color: #ff8055;
-    &--final{
+    background-color: #076c68;
+    &--final {
       display: none;
     }
   }
