Responsividade da Section Method

--- a/src/app/components/header/header.component.scss
+++ b/src/app/components/header/header.component.scss
@@ -41,6 +41,7 @@
       transform: translateY(-50%);
     }
     &--emphasis {
+      cursor: pointer;
       box-sizing: border-box;
       padding-left: 12px;
       padding-right: 12px;
