--- a/src/app/components/cards/member/member.component.scss
+++ b/src/app/components/cards/member/member.component.scss
@@ -13,6 +13,7 @@
   padding: 16px;
   box-sizing: border-box;
   &__info {
+    cursor: pointer;
     display: flex;
     flex-direction: column;
     gap: 10px;
