--- a/src/app/components/cards/service/service.component.html
+++ b/src/app/components/cards/service/service.component.html
@@ -8,7 +8,7 @@
   <p class="service__description"
      [ngClass]="type !== 'default' ? 'service__description--' + type : ''"
   >{{ description }}</p>
-  <h2 class="service__subtitle"
+  <a class="service__subtitle"
       [ngClass]="type !== 'default' ? 'service__subtitle--' + type : ''"
-  >{{subtitle}}</h2>
+  >{{subtitle}}</a>
 </div>
