--- a/src/app/components/sections/method/method.component.scss
+++ b/src/app/components/sections/method/method.component.scss
@@ -4,6 +4,10 @@
   background-color: #ebe4db;
   padding-top: 100px;
   padding-bottom: 100px;
+  &__container {
+    box-sizing: border-box;
+    @include container.container();
+  }
   &__header {
     text-align: center;
   }
@@ -12,6 +16,7 @@
     color: #076c68;
     margin: 0;
     padding: 0;
+
   }
   &__description {
     font-size: 20px;
@@ -19,6 +24,9 @@
     font-weight: 500;
     margin: 0;
     padding: 0;
+    @media (max-width: 767px) {
+      font-size: 18px;
+    }
   }
   &__body {
     padding-top: 50px;
@@ -27,7 +35,6 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    @include container.container();
   }
   &__footer {
     text-align: center;
