--- a/src/app/components/stepper/stepper.component.scss
+++ b/src/app/components/stepper/stepper.component.scss
@@ -6,6 +6,19 @@
     box-sizing: border-box;
     padding-left: 200px;
     padding-right: 200px;
+    @media (max-width: 1199px) {
+      padding-left: 100px;
+      padding-right: 100px;
+    }
+    @media (max-width: 991px) {
+      padding-left: 25px;
+      padding-right: 25px;
+    }
+    @media (max-width: 767px) {
+      padding-left: 0;
+      padding-right: 0;
+      gap: 20px;
+    }
   }
 
   &__indicator {
@@ -48,9 +61,17 @@
   }
 
   &__line {
+    height: 100%;
     min-height: 280px;
     width: 6px;
     background-color: #076c68;
+    @media (max-width: 991px) {
+      min-height: 300px;
+    }
+    @media (max-width: 767px) {
+      min-height: 350px;
+    }
+
     &--final {
       display: none;
     }
@@ -67,6 +88,12 @@
     padding: 0;
     font-size: 28px;
     color: #076c68;
+    @media (max-width: 767px) {
+      font-size: 22px;
+    }
+    @media (max-width: 452px) {
+      font-size: 18px;
+    }
   }
 
   &__description {
@@ -75,5 +102,8 @@
     font-size: 18px;
     font-weight: 430;
     color: #076c68;
+    @media (max-width: 452px) {
+      font-size: 16px;
+    }
   }
 }
