--- a/src/app/components/sections/method/method.component.html
+++ b/src/app/components/sections/method/method.component.html
@@ -1,9 +1,9 @@
 <section class="method">
   <div class="method__container">
     <div class="method__header">
-      <h1 class="method__title">Sua Jornada, Passo a Passo</h1>
+      <h1 class="method__title">{{ title }}</h1>
       <p class="method__description">
-        Acompanhe cada etapa do caminho para o seu bem-estar emocional.
+        {{ description }}
       </p>
     </div>
 
@@ -18,7 +18,7 @@
 
     <div class="method__footer">
       <button class="method__button method__button--primary">
-        Vamos conversar
+        {{ buttonText }}
       </button>
     </div>
   </div>
