--- a/src/app/components/drawer/drawer.component.scss
+++ b/src/app/components/drawer/drawer.component.scss
@@ -46,5 +46,7 @@
     text-decoration: none;
     width: 100%;
     height: 100%;
+    -webkit-tap-highlight-color: transparent; /* Remove o efeito de destaque no toque */
+    touch-action: manipulation; /* Melhora a resposta ao toque */
   }
 }
