--- a/src/app/components/header/header.component.scss
+++ b/src/app/components/header/header.component.scss
@@ -30,11 +30,22 @@
     justify-content: right;
     align-items: center;
     position: relative;
+    @media (max-width: 991px) {
+      gap: 10px;
+    }
+  }
+  &__indicator{
+    position: absolute;
+    bottom: 17px;
+    background-color: #076c68;
+    height: 4.5px;
+    border-radius: 5px;
+    transition: all 0.2s ease-in-out;
   }
   &__item {
     padding: 0;
     margin: 0;
-    &--left {
+    &--logo {
       position: absolute;
       left: 0;
       top: 50%;
@@ -43,14 +54,14 @@
     &--emphasis {
       cursor: pointer;
       box-sizing: border-box;
-      padding-left: 12px;
-      padding-right: 12px;
+      padding-left: 19px;
+      padding-right: 19px;
       border-radius: 8px;
       display: flex;
       flex-direction: column;
       align-items: center;
       justify-content: center;
-      height: 40px;
+      height: 48px;
       background-color: #076c68;
     }
   }
@@ -60,44 +71,6 @@
     font-weight: 500;
     &--emphasis {
       color: white;
-    }
-  }
-  &__toggle {
-    box-sizing: border-box;
-    padding: 8px;
-    width: 48px;
-    height: 48px;
-    align-items: center;
-    justify-content: center;
-    gap: 8px;
-    border-radius: 8px;
-    background-color: #f0ebe5;
-    display: flex;
-    flex-direction: column;
-    transition: background-color 0.3s ease-in-out;
-    border: 1px solid rgba(0, 0, 0, 0.1);
-    &--active {
-      //background-color: #076c68;
-    }
-    &:focus{
-      outline: none;
-    }
-  }
-  &__line {
-    border-radius: 8px;
-    background-color: #076c68;
-    height: 3px;
-    transition:
-      width 0.3s ease-in-out,
-      background-color 0.3s ease-in-out;
-    &--active {
-      //background-color: white;
-    }
-    &--w100 {
-      width: 100%;
-    }
-    &--w50 {
-      width: 50%;
     }
   }
 }
