--- a/src/app/components/sections/team/team.component.html
+++ b/src/app/components/sections/team/team.component.html
@@ -1,20 +1,12 @@
 <section class="team">
   <div class="team__header">
-    <h1 class="team__title">Nosso time</h1>
+    <h1 class="team__title">{{ title }}</h1>
     <div class="team__nav">
       <button class="team__nav-button">
-        <img
-          class="team__nav-icon"
-          src="/images/widgets/arrow-left.svg"
-          alt="Anterior"
-        />
+        <img class="team__nav-icon" [src]="leftIcon" [alt]="leftAlt" />
       </button>
       <button class="team__nav-button">
-        <img
-          class="team__nav-icon"
-          src="/images/widgets/arrow-right.svg"
-          alt="Anterior"
-        />
+        <img class="team__nav-icon" [src]="rightIcon" [alt]="rightAlt" />
       </button>
     </div>
   </div>
@@ -29,12 +21,8 @@
     </app-member>
   </div>
   <div class="team__footer">
-    <h2 class="team__subtitle">Um time dedicado ao seu bem-estar</h2>
-    <p class="team__description">
-      Profissionais qualificados e apaixonados. Cada membro traz experiência,
-      empatia e um compromisso genuíno com o seu crescimento pessoal. Conte com
-      a gente para caminhar ao seu lado nessa jornada.
-    </p>
-    <button class="team__button team__button--primary">Vamos conversar</button>
+    <h2 class="team__subtitle">{{ subtitle }}</h2>
+    <p class="team__description">{{ description }}</p>
+    <button class="team__button team__button--primary">{{ buttonText }}</button>
   </div>
 </section>
