--- a/src/app/components/sections/team/team.component.scss
+++ b/src/app/components/sections/team/team.component.scss
@@ -11,6 +11,7 @@
     margin-bottom: 35px;
   }
   &__title {
+    font-weight: 600;
     font-size: 46px;
     color: #076c68;
     margin: 0;
@@ -31,6 +32,7 @@
     padding: 0;
   }
   &__description {
+    font-size: 18px;
     color: #076c68;
     padding: 0;
     margin: 0 0 15px;
